# Titan

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.example.json  docker-compose.yml
.github/workflows/: build.yml
benchmarks/: bench_order_book.cpp  bench_spsc_queue.cpp  bench_vwap.cpp
cmake/: CompilerWarnings.cmake
examples/node/: client.js  package.json
examples/python/: client.py
examples/web/: index.html
src/: main.cpp
src/binance/: endpoints.hpp  feed_handler.cpp  feed_handler.hpp  feed_state.hpp  message_parser.cpp  message_parser.hpp  types.hpp
src/core/: config.cpp  config.hpp  fixed_point.hpp  messages.hpp  status.hpp  types.hpp
src/engine/: market_data_engine.cpp  market_data_engine.hpp  reconnect_strategy.cpp  reconnect_strategy.hpp
src/network/: connection_state.hpp  rest_client.cpp  rest_client.hpp  ssl_context.cpp  ssl_context.hpp  websocket_client.cpp  websocket_client.hpp
src/orderbook/: book_metrics.cpp  book_metrics.hpp  order_book.cpp  order_book.hpp  price_level.hpp  snapshot.hpp
src/output/: console_logger.cpp  console_logger.hpp  json_formatter.cpp  json_formatter.hpp  websocket_server.cpp  websocket_server.hpp
src/queue/: spsc_queue.hpp
src/recording/: recorder.hpp
src/trade/: alert_detector.cpp  alert_detector.hpp  trade_flow.cpp  trade_flow.hpp  vwap_calculator.cpp  vwap_calculator.hpp
tests/integration/: test_pipeline.cpp
tests/unit/: test_config.cpp  test_fixed_point.cpp  test_message_parser.cpp  test_order_book.cpp  test_spsc_queue.cpp  test_status.cpp  test_vwap.cpp
